
2003-08-02 Version 1.32 10Sep03 Beta
- Finally fixed the .messages that was sent during prompts
  in the console with no readline.
- Implement new Include/Exclude semantics.
- Fix a good number of segfaults reported by Chris Allen in
  the variable expansion code. 
- Print warning message if a job is blocked by user unmount.
- Fix additional variable expansion problem reported by Chris Allen.
- Fix pathconf() error status bug that caused a segfault on
  a FreeBSD system -- reported by Gernot Hueber.
- Make sure the console sends ".messages" only when at the
  command line prompt.
- Apply a patch from Nic Bellamy that corrects a file descriptor
  leak in the Storage deamon when a job is canceled. (Thanks)
- Implement < and | in File daemon.
- Implement ClientRunBeforeJob and ClientRunAfterJob.
- Corrected BSRatEOF to be BSFatEOF in btape --
  reported by Lars Koller.
- Documented BSFatEof
- Eliminated save_level in FD replaced by JobLevel.
- Increased MAX_RES_ITEMS from 35 to 50 to handle
  new ClientRunBeforeJob ...
- Add line number in error message for restore from file.
- Correct editing of jobids (misplaced comma).
- Implement restore files.
- Quickie patch to allow Purged Volumes to be mounted.   
  Must review algorithm.
- Eliminate a duplicated query from query.sql
- Restructure ua_restore.c so that I can add restore files.
- Correct positioning problem at beginning of a second volume 
  introduced with the new forward spacing code.
- Eliminated a sprintf() in the tree routines.
- Doc updates
- Added HOST_OS, DISTNAME, and DISTVER to the status output.
- Eliminated a few stray Dmsgn(000, messages making them either
  debug_level 100, or Pmsg().
- Made the default "Maximum File Size" 1Gbyte in SD.
- Cache path in tree.c to reduce calls to make_tree_path 
- Documentation updates
- Implement forward space file and block when reading a bsr.
- Fixed a bug in db_find_next_volume() where the VolStatus was
  not being returned.